[gd_scene load_steps=37 format=3 uid="uid://dxthpkt8nu05i"]

[ext_resource type="Script" path="res://scripts/hero_yari.gd" id="1_eljcu"]
[ext_resource type="Texture2D" uid="uid://chq6u55jqcwad" path="res://images/WayOfRevival2.png" id="1_vsq16"]
[ext_resource type="PackedScene" uid="uid://vfvqnuxp2t81" path="res://scenes/heroes/abilities/yari_ability.tscn" id="3_eeror"]
[ext_resource type="PackedScene" uid="uid://2y10hrtu4pu6" path="res://scenes/components/hurtbox_component.tscn" id="4_6eqk7"]
[ext_resource type="PackedScene" uid="uid://4v6hqfvsop8b" path="res://scenes/components/health_component.tscn" id="5_0srty"]
[ext_resource type="AudioStream" uid="uid://dlecny0y6g60b" path="res://sounds/jump.wav" id="6_t0882"]
[ext_resource type="AudioStream" uid="uid://cn507ruki1fd8" path="res://sounds/cut.wav" id="7_qj3k7"]

[sub_resource type="Animation" id="Animation_s4nfc"]
resource_name = "yari_idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}

[sub_resource type="Animation" id="Animation_q0xta"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}

[sub_resource type="Animation" id="Animation_f5r0c"]
resource_name = "yari_walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24]
}

[sub_resource type="Animation" id="Animation_3rwct"]
resource_name = "yari_attack"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [25, 26]
}

[sub_resource type="Animation" id="Animation_765dt"]
resource_name = "yari_jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [26]
}

[sub_resource type="Animation" id="Animation_bphoc"]
resource_name = "yari_death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [27]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ypcdl"]
_data = {
"RESET": SubResource("Animation_q0xta"),
"yari_attack": SubResource("Animation_3rwct"),
"yari_death": SubResource("Animation_bphoc"),
"yari_idle": SubResource("Animation_s4nfc"),
"yari_jump": SubResource("Animation_765dt"),
"yari_walk": SubResource("Animation_f5r0c")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7522j"]
animation = &"yari_attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lkuet"]
animation = &"yari_death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q42nx"]
animation = &"yari_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6luj3"]
animation = &"yari_jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gnux2"]
animation = &"yari_walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yrrfw"]
advance_mode = 2
advance_expression = "jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gswhu"]
advance_mode = 2
advance_expression = "!jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8tica"]
advance_mode = 2
advance_expression = "using_ability"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eprq0"]
advance_mode = 2
advance_expression = "using_ability"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tupot"]
advance_mode = 2
advance_expression = "using_ability"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8yh7u"]
advance_mode = 2
advance_expression = "moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r2mfd"]
advance_mode = 2
advance_expression = "!moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_60lgx"]
advance_mode = 2
advance_expression = "!using_ability"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hn3af"]
advance_mode = 2
advance_expression = "dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_etixo"]
advance_mode = 2
advance_expression = "dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1qlbu"]
advance_mode = 2
advance_expression = "dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u8koj"]
advance_mode = 2
advance_expression = "dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_53tir"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7cfyl"]
advance_mode = 2
advance_expression = "jumping"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_fx4hr"]
states/yari_attack/node = SubResource("AnimationNodeAnimation_7522j")
states/yari_attack/position = Vector2(596, 100)
states/yari_death/node = SubResource("AnimationNodeAnimation_lkuet")
states/yari_death/position = Vector2(596, 208)
states/yari_idle/node = SubResource("AnimationNodeAnimation_q42nx")
states/yari_idle/position = Vector2(319, 36)
states/yari_jump/node = SubResource("AnimationNodeAnimation_6luj3")
states/yari_jump/position = Vector2(319, 208)
states/yari_walk/node = SubResource("AnimationNodeAnimation_gnux2")
states/yari_walk/position = Vector2(469, 36)
transitions = ["yari_idle", "yari_jump", SubResource("AnimationNodeStateMachineTransition_yrrfw"), "yari_jump", "yari_idle", SubResource("AnimationNodeStateMachineTransition_gswhu"), "yari_jump", "yari_attack", SubResource("AnimationNodeStateMachineTransition_8tica"), "yari_walk", "yari_attack", SubResource("AnimationNodeStateMachineTransition_eprq0"), "yari_idle", "yari_attack", SubResource("AnimationNodeStateMachineTransition_tupot"), "yari_idle", "yari_walk", SubResource("AnimationNodeStateMachineTransition_8yh7u"), "yari_walk", "yari_idle", SubResource("AnimationNodeStateMachineTransition_r2mfd"), "yari_attack", "yari_idle", SubResource("AnimationNodeStateMachineTransition_60lgx"), "yari_idle", "yari_death", SubResource("AnimationNodeStateMachineTransition_hn3af"), "yari_walk", "yari_death", SubResource("AnimationNodeStateMachineTransition_etixo"), "yari_attack", "yari_death", SubResource("AnimationNodeStateMachineTransition_1qlbu"), "yari_jump", "yari_death", SubResource("AnimationNodeStateMachineTransition_u8koj"), "Start", "yari_idle", SubResource("AnimationNodeStateMachineTransition_53tir"), "yari_walk", "yari_jump", SubResource("AnimationNodeStateMachineTransition_7cfyl")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iakiu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wntyp"]
radius = 7.0
height = 58.0

[node name="HeroYari" type="CharacterBody2D" node_paths=PackedStringArray("ability_sfx", "jump_sfx", "hero_ability", "cleanup_timer", "ability_timer")]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_eljcu")
ability_sfx = NodePath("AudioStreamPlayer2D")
jump_sfx = NodePath("JumpSound")
hero_ability = NodePath("YariAbility")
cleanup_timer = NodePath("Timer")
ability_timer = NodePath("AbilityTimer")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-4, 0)
texture = ExtResource("1_vsq16")
hframes = 20
vframes = 20
frame = 20

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ypcdl")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_fx4hr")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
scale = Vector2(0.640001, 2.68)
shape = SubResource("RectangleShape2D_iakiu")

[node name="YariAbility" parent="." instance=ExtResource("3_eeror")]

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_6eqk7")]
health_component = NodePath("../HealthComponent")
hero = true
spike_invulnerable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_wntyp")
debug_color = Color(0.980392, 0.133333, 0, 0.419608)

[node name="HealthComponent" parent="." instance=ExtResource("5_0srty")]

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_t0882")
volume_db = -10.0

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_qj3k7")
volume_db = -10.0

[node name="AbilityTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AbilityTimer" to="." method="_on_ability_timer_timeout"]
